@@ -1,5 +1,10 @@
 2001-05-01  Sam Steingold  <sds@gnu.org>
 
+	* clos.lisp (%call-next-method): WARN instead of ERROR-OF-TYPE
+	on method mismatch
+
+2001-05-01  Sam Steingold  <sds@gnu.org>
+
 	* type.lisp (subtypep): handle types NIL and T specially
 	[bugfix: (subtypep 'EXTENDED-CHAR 'CHARACTER) returned (NO)]
 
@@ -10,8 +15,8 @@
 
 2001-05-01  Sam Steingold  <sds@gnu.org>
 
-	* spvw.d (main): added "-t" ("traditional") command line
-	option to override "-a" ("maximum ANSI")
+	* spvw.d (main): added "-traditional" command line
+	option to override "-ansi" ("-a" deprecated)
 
 2001-05-01  Sam Steingold  <sds@gnu.org>
 
